tests/errors/generic_fn_value.vt
fn id<T>(x: T): T { return x; }
fn main() { let f = id; }
